--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,147 @@
-.App {
-  text-align: center;
+@import "~react-datepicker/dist/react-datepicker.css";
+
+* {
+  font-family: sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input::placeholder {
+  color: black !important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media (max-width: 700px) {
+  .form {
+    width: 99vw !important;
+  }
+
+  .form-line {
+    flex-direction: column;
+    align-items: start !important;
+    margin: 0 0.5em !important;
+  }
+
+  .select-wrapper {
+    margin: 1em 0 !important;
+    width: 80% !important;
+  }
+
+  .react-datepicker-wrapper {
+    margin: 1em 0;
+    width: 80% !important;
+  }
+
+  .button {
+    width: 80% !important;
+    margin: 1em;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.form {
+  width: 70vw;
+  margin: 0 auto;
+  padding: 1em;
   display: flex;
   flex-direction: column;
+  border: 1px solid blue;
+  box-sizing: border-box;
+}
+
+.form-line {
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  width: 100%;
+  margin: 2em 0;
+}
+
+.hidden {
+  display: none;
+}
+
+.select-wrapper {
+  position: relative;
+  width: 40%;
+}
+
+.label {
+  position: absolute;
+  top: -1em;
+  left: 0;
+  font-size: 0.75em;
+  margin: 0;
+  padding: 0;
+  color: #777;
+}
+
+.select-view {
+  box-sizing: border-box;
+  width: 100%;
+  padding: 0.5em 1em;
+  border: none;
+  border-bottom: 1px solid black;
+}
+
+.select-view-active {
+  transition: all 0.5s;
+  border-bottom: 1px solid blue;
+}
+
+.dropdown {
+  display: block;
+  position: absolute;
+  top: 2.5em;
+  width: 100%;
+  max-height: 10em;
+  overflow-y: scroll;
+  box-shadow: 0px 5px 10px 5px rgba(34, 60, 80, 0.2);
+  z-index: 10;
+  background-color: white;
+}
+
+/* For Webkit-based browsers */
+.dropdown::-webkit-scrollbar {
+  width: 5px; /* width of the scrollbar */
+}
+
+.option {
+  padding: 0.5em 1em;
+}
+
+.option:hover {
+  background-color: rgba(128, 128, 128, 0.3);
+}
+
+.react-datepicker-wrapper {
+  width: 40%;
+}
+
+.react-datepicker-wrapper input {
+  box-sizing: border-box;
+  width: 100%;
+  padding: 0.5em 1em;
+  border: none;
+  border-bottom: 1px solid black;
+  font-size: 1em;
+}
+
+.comment {
+  font-size: 1em;
+}
+
+.button {
+  width: 40%;
+  outline: none;
+  background-color: blue;
+  border: none;
   color: white;
+  font-size: 1em;
+  padding: 1.5em 2em;
+  border-radius: 5em;
+  transition: all 0.3s;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button:focus {
+  color: black;
+  background-color: white;
+  border: 1px solid blue;
+  transition: all 0.3s;
 }
